# pelican-fretboard

./: README.md  pyproject.toml
pelican/plugins/fretboard/: chord.py  plugin.py  scale.py  tab.py
